<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LayoutLinear"
    android:background="@color/white">

    <EditText
        android:id="@+id/kepada"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/kepada"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"/>

    <EditText
        android:id="@+id/perihal"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/perihal"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:autofillHints=""
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top"
        android:inputType="textPersonName"
        android:hint="@string/pesan"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"/>

    <Button
        android:id="@+id/kirim"
        android:layout_width="100dp"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:text="@string/kirim"
        android:textColor="@color/white"/>
</LinearLayout>